--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,9 +2,5 @@
 alemuro_homeassistant_force_upgrade: no
 alemuro_homeassistant_version: 0.109.6
 alemuro_homeassistant_path: /srv/homeassistant
-alemuro_homeassistant_extra_pip_packages:
-  - netdisco
-  - mysqlclient
-alemuro_homeassistant_extra_apt_packages:
-  - libmariadbclient-dev
-  - libssl-dev
+alemuro_homeassistant_extra_pip_packages: []
+alemuro_homeassistant_extra_apt_packages: []
